--- a/style.css
+++ b/style.css
@@ -473,16 +473,123 @@ body.dark-mode .serviceDetailsWrapper {
 }
 /* End of services section styling */
 
+/* Gallery section*/
+.gallerySection {
+    padding: 4rem 2rem;
+    background: #f8f8f8;
+}
+
+.galleryTitle {
+    font-size: 12.5rem;
+    font-weight: 900;
+    width: 100%; /* Ensure it takes full width */
+    margin: 0 auto; /* Center it if block-level */
+    margin-top: 16rem;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.galleryGrid {
+    display: flex;
+    gap: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-top: 10rem;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;  
+}
+
+.photo {
+    overflow: hidden;
+}
+
+.photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Hide images*/
+.hidden {
+    display: none;
+}
+
+.seeMoreBtn {
+    z-index: 100;
+    display: block;
+    margin: 2rem auto 0 auto;
+    padding: 1rem 2.5rem;
+    font-size: 1.5rem;
+    background: #bc0000;
+    color: #fff;
+    border: none;
+    border-radius: 2rem;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+
+.seeMoreBtn:hover {
+    background: #a00000;
+}
+
+.galleryGridWrapper {
+    position: relative;
+    width: 100%;
+    /* Adjust height if needed, or let content define it */
+}
+
+.gallery-fade {
+    position: absolute;
+    top: 42rem;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 60rem; /* Adjust height for how much fade you want */
+    pointer-events: none;
+    background: linear-gradient(
+        to bottom,
+        rgba(255,255,255,0) 0%,
+        rgba(255,255,255,0.4) 40%,
+        rgba(255,255,255,0.7) 70%,
+        rgb(230, 230, 230) 100%
+    );
+    filter: blur(2px);
+}
+
+body.dark-mode .projectsSection,
+body.dark-mode .galleryGridWrapper,
+body.dark-mode .galleryGrid,
+body.dark-mode .column {
+    background-color: #000;
+}
+
+body.dark-mode .gallery-fade {
+    background: linear-gradient(
+        to bottom,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0.4) 40%,
+        rgba(0,0,0,0.7) 70%,
+        #000 100%
+    );
+}
+
 /* Wrapper for the entire footer section */
 .footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between; /* Push footer to the bottom */
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
     background-color: #bc0000;
     padding: 4rem 2rem;
     box-sizing: border-box;
+    margin-top: 100vh;
 }
 
 /* Middle Content: Call to Action + Contact Info */
@@ -607,7 +714,7 @@ footer {
     margin-bottom: 0.5rem;
     font-weight: 600;
     background-color: #bc0000;
-    margin-right: 19.5rem;
+    margin-right: 14rem;
 }
 
 .navbuttons ul {
